--- a/apps/core/templates/pages/recipe.html
+++ b/apps/core/templates/pages/recipe.html
@@ -37,7 +37,7 @@
         <div class="links">
             <a href="/save-recipe/{{ recipe.id }}/" class="btn btn-link">
                 <i class="octicon octicon-heart"></i>
-                {{ recipe.saved.all|length }}
+                Save me!
             </a>
         </div>
     {% endif %}
