--- a/apps/accounts/templates/accounts/form_snippet.html
+++ b/apps/accounts/templates/accounts/form_snippet.html
@@ -1,7 +1,6 @@
 {% load bootstrap4 %}
 
-
-                <form class="form-signin" method="POST">
+                <form class="form-signin" method="POST" action="">
                     {% csrf_token %}
                     {% bootstrap_form form %}
                     <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">{{ form_title }}</button>
