--- a/apps/accounts/templates/accounts/signup.html
+++ b/apps/accounts/templates/accounts/signup.html
@@ -1,16 +1,18 @@
 {% extends "accounts_base.html" %}
 {% load bootstrap4 %}
 
-{% block content %}
+{% block header %}
     <header class="bg-gradient" id="home">
         <div class="container mt-5">
             <h1>Sign-up</h1>
             <p class="tagline">Get started with your free account</p>
             <br>
-                        <br>
+            <br>
         </div>
-
     </header>
+{% endblock header %}
+
+{% block content %}
 
 <div class="section">
         <div class="container">
