--- a/apps/core/templates/500.html
+++ b/apps/core/templates/500.html
@@ -2,14 +2,25 @@
 
 {% block title %}Server Error{% endblock %}
 
+{% block header %}
+<header class="bg-gradient" id="home">
+    <div class="container mt-5">
+    </div>
+</header>
+{% endblock header %}
+
 {% block content %}
-<h1>Uh oh! 500</h1>
+<div>
+    <div class="section-title">
+        <h1>Uh oh! 500</h1>
 
-<h3>Looks like something went wrong!</h3>
+        <h3>Looks like something went wrong!</h3>
 
-<p>We track these errors automatically, but if the problem persists feel free
-to contact us. In the meantime, try refreshing.</p>
+        <p>We track these errors automatically, but if the problem persists feel free
+        to contact us. In the meantime, try refreshing.</p>
 
-<a href="#" class="btn btn-secondary" onclick="history.go(-1);return false;">&larr; Back</a>
+        <a href="#" class="btn btn-secondary" onclick="history.go(-1);return false;">&larr; Back</a>
+    </div>
+</div>
 {% endblock content %}
 
