--- a/apps/core/templates/base.html
+++ b/apps/core/templates/base.html
@@ -55,42 +55,39 @@
 <!-- if user is logged in -->
                 {% if request.user.is_authenticated %}
                         <a class="btn btn-outline-light my-3 my-sm-0 ml-lg-3" href="{% url 'view_profile' request.user %}" ><span class="ti-user">   </span>
-                            {{ request.user }}
+                {{ request.user }}
                         </a>
-
                 {% else %}
-<a href="{% url 'login' %}" class="btn btn-outline-light my-3 my-sm-0 ml-lg-3"><span class="ti-user">   </span>LOGIN</a>
+                        <a class="btn btn-outline-light my-3 my-sm-0 ml-lg-3" href="{% url 'login' %}"><span class="ti-user">   </span>LOGIN</a>
                 {% endif %}
-
-
                     </nav>
                 </div>
             </div>
         </div>
     </div>
-
-{% block main %}
-
+    
+    {% block header %}
+    
+    {% endblock header %}
 
     <div class="container pt-2">
 
       {# Enable Django's "messages" system #}
       {% if messages %}
           {% for message in messages %}
-              <div class="alert show-zindex alert-dismissible {% if message.tags %}alert-{{ message.tags }}{% endif %}">{{ message }}
+              <div class="alert alert-dismissible {% if message.tags %}alert-{{ message.tags }}{% endif %}">{{ message }}
                   <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                   </button>
               </div>
           {% endfor %}
       {% endif %}
-
-      {% block content %}
- 
-      {% endblock content %}
+    </div>
     
+      {% block content %}
+      
+      {% endblock content %}
 
-{% endblock main %}
 
 <!-- FOOTER -->
     <div class="light-bg py-5" id="contact">
